--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,5 +14,6 @@ Config/testthat/edition: 3
 NeedsCompilation: no
 Packaged: 2024-10-6 09:04:00 UTC; kbart
 Imports:
-    ggplot2
+    ggplot2,
+    methods
 RoxygenNote: 7.3.2
