Added Theme 	# Please enter the commit message for your changes. Lines starting 	# with '#' will be ignored, and an empty message aborts the commit. 	# 	# On branch add-theme 	# Changes to be committed: 	#	modified:   DESCRIPTION 	#	modified:   NAMESPACE 	#	modified:   R/linreg.R 	#	modified:   man/linreg-class.Rd 	#	new file:   resources/liulogo.png 	#

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,5 +15,7 @@ NeedsCompilation: no
 Packaged: 2024-10-6 09:04:00 UTC; kbart
 Imports:
     ggplot2,
-    methods
+    methods,
+    png,
+    grid
 RoxygenNote: 7.3.2
