--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,10 @@ Description: This package will provide functions for linjear regression.
 License: GPL-3
 Encoding: UTF-8
 Depends: R (>= 3.5.0)
-Suggests: testthat (>= 3.0.0)
+Suggests: 
+    knitr,
+    rmarkdown,
+    testthat (>= 3.0.0)
 Config/testthat/edition: 3
 NeedsCompilation: no
 Packaged: 2024-10-6 09:04:00 UTC; kbart
@@ -19,3 +22,4 @@ Imports:
     png,
     grid
 RoxygenNote: 7.3.2
+VignetteBuilder: knitr
